--- a/Ebebul.API/appsettings.json
+++ b/Ebebul.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ServerConnection": "Host=localhost; Database=Ebebul; Port=5432; Username=postgres; Password=1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
